--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.12.3",
+    "@google-cloud/datastore": "^6.6.2",
     "@headlessui/react": "^1.4.2",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
     "@svgr/webpack": "5.5.0",
@@ -53,6 +54,7 @@
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
+    "lint": "^0.7.0",
     "lodash": "^4.17.21",
     "mini-css-extract-plugin": "0.11.3",
     "nanoid": "^3.1.30",
@@ -66,20 +68,22 @@
     "prompts": "2.4.0",
     "react": "^17.0.2",
     "react-app-polyfill": "^2.0.0",
+    "react-canny": "^0.0.2",
     "react-dev-utils": "^11.0.3",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.4",
     "react-filepond": "^7.1.1",
+    "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.1.1",
     "react-mixpanel-browser": "^3.2.2",
     "react-pdf": "^5.6.0",
     "react-refresh": "^0.8.3",
     "react-router-dom": "^6.0.1",
     "react-scripts": "^5.0.0",
+    "react-toastify": "^9.0.1",
     "recoil": "^0.4.1",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
-    "sass": "^1.51.0",
     "sass-loader": "^10.0.5",
     "semver": "7.3.2",
     "style-loader": "1.3.0",
@@ -130,6 +134,7 @@
     "@types/lodash": "^4.14.176",
     "@types/node": "^16.11.0",
     "@types/pdfjs-dist": "^2.10.378",
+    "@types/react-helmet": "^6.1.5",
     "@types/react-pdf": "^5.0.9",
     "@types/react-router-dom": "^5.3.1",
     "@types/tiny-async-pool": "^1.0.0",
